--- a/views/index.html
+++ b/views/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <h1>SQL Intro Omega</h1>
+    <div id='outputDiv'>
+      Images will go here...
+    </div>
   </body>
 </html>
