user input going to server for post call

--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,13 @@
   </head>
   <body>
     <h1>SQL Intro Omega</h1>
+    <div>
+      <h2>Add New Image</h2>
+      <input type='text' placeholder="description" id='descriptionIn' />
+      <input type='text' placeholder="url" id='urlIn' />
+      <button id='addImageButton'>Add Image</button>
+    </div>
+    <h2>Existing Images</h2>
     <div id='outputDiv'>
       Images will go here...
     </div>
